# recipes-app-api

./: .travis.yml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
api/: admin.py  models.py
api/management/commands/: wait_for_db.py
api/migrations/: 0001_initial.py  0002_auto_20200421_1216.py  0003_user_group.py  0004_auto_20200421_1506.py  0005_auto_20200421_1532.py  0006_remove_user_group.py  0007_tag.py  0008_auto_20200422_1352.py  0009_ingredient.py  0010_recipe.py  0011_auto_20200423_1524.py  0012_auto_20200424_1411.py  0013_auto_20200424_1548.py
api/tests/: test_admin.py  test_commands.py  test_models.py
app/: settings.py  urls.py
app/app/: settings.py
recipe/: serializers.py  urls.py  views.py
recipe/tests/: test_ingredients.py  test_recipe_api.py  test_tags_api.py
user/: serializers.py  urls.py  views.py
user/tests/: test_user_api.py
